[gd_scene load_steps=5 format=2]

[ext_resource path="res://Trash/TrashBag.gd" type="Script" id=1]
[ext_resource path="res://Trash/Trash Audio.mp3" type="AudioStream" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/Trash_bag.png-d43ef28331bbd8534797ccfae331eaf5.stex"

[sub_resource type="CircleShape2D" id=2]
radius = 151.026

[node name="TrashBag" type="Sprite"]
scale = Vector2( 0.344388, 0.314413 )
texture = SubResource( 1 )
script = ExtResource( 1 )

[node name="Trash_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash_area"]
position = Vector2( 14.5185, 94.6207 )
shape = SubResource( 2 )

[node name="TrashAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="Trash_stop" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="Trash_area" to="." method="_on_Trash_area_body_entered"]
[connection signal="timeout" from="Trash_stop" to="." method="_on_Trash_stop_timeout"]
